--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="content-inner">
                         <p>I'm</p>
                         <h1>Dipesh Kamat</h1>
-                        <h2></h2>
+                        <h2 style="color: rgb(25, 238, 253); font-weight: 600;"></h2>
                         <div class="typed-text">Persuing B.Com, Under Graduate, Intern Accountant, Intern GST Specialist, Transaction Advisory "</div>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                                         <p>High School</p><p>70%</p>
                                     </div>
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                     <!-- <div class="skill-name">
                                         <p>Senior Secondary Schooling</p><p>68%</p>
@@ -130,7 +130,7 @@
                                         <p>Senior Secondary Schooling</p><p>68%</p>
                                     </div>
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                     <!-- <div class="skill-name">
                                         <p>Marketing</p><p>85%</p>
@@ -306,7 +306,7 @@
                     <div class="content-inner">
                         <div class="row align-items-center">
                             <div class="col-md-6">
-                                <p>&copy; Copyright <a href="https://htmlcodex.com">HTML Codex</a>. All Rights Reserved</p>
+                                <!-- <p>&copy; Copyright <a href="https://htmlcodex.com">HTML Codex</a>. All Rights Reserved</p> -->
                             </div>
                             <div class="col-md-6">
                                 <p>Powered by <a href="https://pankaj-portfolio-ef1ca.web.app/">Pankaj Kumar | MEAN DEVELOPER</a></p>
